--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "delete-it",
+    "name": "Delete It!",
     "slug": "delete-it",
     "version": "1.0.0",
     "orientation": "portrait",
