--- a/app.json
+++ b/app.json
@@ -12,11 +12,17 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.jimsegovia.deleteit",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_MEDIA_LOCATION"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -32,6 +38,14 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Permite a DeleteIt acceder a tus fotos para ayudarte a liberar espacio.",
+          "savePhotosPermission": "Permite a DeleteIt guardar o mover fotos.",
+          "isStandard": true
         }
       ]
     ],
