--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-video": "~2.2.2",
+    "expo-video-thumbnails": "~9.1.3",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
